page refresh button added

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,13 @@
     <div class="card">
       <span class="number">7</span>
     </div>
+    <button
+      type="button"
+      class="button btn btn-danger d-flex justify-content-center"
+      onClick="window.location.reload();"
+    >
+      New Card
+    </button>
 
     <!-- do not remove this bundle.js tag -->
     <script type="text/javascript" src="./bundle.js"></script>
