--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div class="card">
       <span class="number">7</span>
     </div>
+    <!-- refresh button -->
     <button
       type="button"
       class="button btn btn-danger d-flex justify-content-center"
