--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Random Card Generator</title>
+    <title>
+      Random Card Generator
+    </title>
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
 
@@ -18,6 +20,20 @@
     >
       New Card
     </button>
+
+    <!-- this is the footer -->
+    <footer class="footer d-flex justify-content-center">
+      <p class="footer-text">
+        Made by
+        <a
+          href="https://github.com/epuermas"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Eduardo Puermas
+        </a>
+      </p>
+    </footer>
 
     <!-- do not remove this bundle.js tag -->
     <script type="text/javascript" src="./bundle.js"></script>
