--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       class="button btn btn-danger d-flex justify-content-center"
       onClick="window.location.reload();"
     >
-      New Card
+      Shuffle
     </button>
 
     <!-- this is the footer -->
