--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>
-      Random Card Generator
+      Random Card Generator by Eduardo Puermas
     </title>
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
