--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       </p>
     </footer>
 
-    <!-- do not remove this bundle.js tag -->
+    <!-- do not remove this bundle.js tag! -->
     <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
